--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,12 +24,12 @@ jobs:
       run: |
         sudo apt-get -q update
         sudo apt-get -qy install \
-            curl build-essential make cmake libc6-dev \
-            gcc g++ gfortran intel-mkl-full \
+            gcc g++ curl build-essential make libc6-dev \ 
             python3 python3-pip python3-pytest \
             python3-numpy python3-scipy python3-pandas python3-matplotlib \
             jupyter
         cd /usr/bin ; sudo ln -sf py.test-3 py.test
     - name: test
       run: |
-        python -m pytest test_fft.py
+        make
+        make test
