--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,10 +24,10 @@ jobs:
       run: |
         sudo apt-get -q update
         sudo apt-get -qy install \
-            gcc g++ curl build-essential make libc6-dev \ 
+            curl build-essential make libc6-dev \ 
+            gcc g++ gfortran \
             python3 python3-pip python3-pytest \
-            python3-numpy python3-scipy python3-pandas python3-matplotlib \
-            jupyter
+            python3-numpy python3-scipy python3-pandas python3-matplotlib
         cd /usr/bin ; sudo ln -sf py.test-3 py.test
     - name: test
       run: |
