--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
     - name: dependency (ubuntu)
       run: |
         sudo apt-get -q update
-        sudo apt-get -qy install \
+        sudo apt -y install \
             curl build-essential make libc6-dev \ 
             gcc g++ gfortran \
             python3 python3-pip python3-pytest \
