--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,9 +26,8 @@ jobs:
         sudo apt-get -qy install \
             curl build-essential make cmake libc6-dev \
             gcc g++ gfortran \
-            python3 python3-pip python3-pytest \
-            python3-numpy python3-scipy python3-pandas python3-matplotlib \
-            jupyter
+            python3 python3-pip python3-pytest python-pybind11\
+            python3-numpy python3-scipy python3-pandas python3-matplotlib
         cd /usr/bin ; sudo ln -sf py.test-3 py.test
     - name: test
       run: |
